<resources>

    <string name="app_name">CulturaVerde</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Login -->
    <string name="texto_ingresar">Ingresar</string>
    <string name="texto_registrar">Registrar</string>
    <string name="texto_usuario">Email</string>
    <string name="texto_contraseña">Contraseña</string>

    <!-- Pantalla principal consumidores -->
    <string name="texto_categorias">Buscá tus productos por categorias</string>
    <string name="categorias">Categorias</string>
    <string name="texto_geo">Encontrá productores cercanos</string>
    <string name="geolocalizacion">Geolocalización</string>
    <string name="texto_reservas">Accedé a tus reservas</string>
    <string name="reservas">Reservas</string>
    <string name="metodo_acceso_categorias">mostrarCategorias</string>

    <!-- Pantalla principal productores-->
    <string name="texto_productos">Gestioná tus productos</string>
    <string name="productos">Productos</string>

    <!-- Menu desplegable --><!-- Pantalla principal consumidores -->
    <string name="title_activity_menudesplegable_consumidores"></string>
    <string name="nav_header_title_consumidor">Consumidor A</string>
    <string name="nav_header_subtitle_consumidor">consumidorA@gmail.com</string>
    <string name="nav_header_desc_consumidor">Navigation header</string>
    <string name="menu_principalconsumidores">Mi cuenta</string>
    <string name="menu_alertas_consumidor">Alertas</string>
    <string name="menu_editardatos_consumidor">Editar Datos</string>

    <!-- Menu desplegable --><!-- Pantalla principal productores -->
    <string name="title_activity_menunavigation_productores"></string>
    <string name="nav_header_title_productores">Productor A</string>
    <string name="nav_header_subtitle_productores">productora@gmail.com</string>
    <string name="nav_header_desc_productores">Navigation header</string>
    <string name="menu_principalproductores">Mi cuenta</string>
    <string name="menu_alertas_productores">Alertas</string>
    <string name="menu_editardatos_productores">Editar Datos</string>

    <!-- Pantalla registrar -->
    <string name="texto_creacion">Creá tu cuenta en Cultura Verde</string>
    <string name="texto_tipocreacion">Selecciona un tipo de usuario</string>
    <string name="IngresarNombre">Nombre</string>
    <string name="IngreseApellido">Apellido</string>
    <string name="Ingresefechanac">Fecha de nacimiento</string>
    <string name="IngreseTelefono">Teléfono</string>
    <string name="IngreseRazonsocial">Razón social</string>
    <string name="IngreseEmail">Email</string>
    <string name="IngresePassword">Password</string>

    <!-- Pantalla alertas -->
    <string name="texto_pantalla_alertas">Configurá tus notificaciones a continuación.</string>
    <string name="alerta_modificacion_reservas">Actualización de reservas</string>
    <string name="alerta_productos_interes">Productos de interés</string>
    <string name="alerta_nuevas_reservas">Nuevas reservas</string>

    <!-- Pantalla preferencias -->
    <string name="texto_pantalla_preferencias">Seleccioná tus productos de interés.</string>
    <string name="texto_titulo_preferencias">Preferencias</string>
    <string name="texto_verduras">Verduras</string>
    <string name="texto_frutas">Frutas</string>
    <string name="texto_otros">Otros</string>

    <!-- Pantalla productos productor -->
    <string name="texto_productos_productor">Mis productos</string>
    <string name="texto_editar_producto">Modificar</string>
    <string name="texto_eliminar_producto">Desactivar</string>
    <string name="texto_crear_oferta">Activar</string>

    <!-- Pantalla reservas -->
    <string name="texto_mis_reservas">Mis reservas</string>
    <string name="texto_estado">Estado</string>
    <string name="texto_fecha_creacion">Fecha creación</string>
    <string name="texto_reserva">Reserva</string>
    <string name="texto_total">Total</string>
    <string name="texto_producto">Producto</string>
    <string name="texto_detalle_reserva">Detalle de la reserva</string>
    <string name="texto_cantidad">Cantidad</string>
    <string name="texto_subtotal">Subtotal</string>
    <string name="texto_categoria">Categoria</string>
    <string name="texto_precio_unidad">Precio x unidad</string>

    <!-- Pantalla estado reservas -->
    <string name="texto_estado_reservas">Estado de la reserva</string>
    <string name="texto_cambio_estados">Modificá el estado de tu reserva a continuación.</string>

    <!-- Pantalla calificar productor-->
    <string name="texto_calificar_productor">Calificá al productor a continuación.</string>
    <string name="texto_cp">Calificar</string>

    <!-- Botones -->
    <string name="boton_guardar">Guardar</string>
    <string name="nombreUsuarioTitulo">Nombre</string>
    <string name="IngreseNombreUsuario">Ingrese nombre</string>
    <string name="apellidoUsuarioTitulo">Apellido</string>
    <string name="ingreseApellidoUsuario">Ingrese apellido</string>
    <string name="fechaNacTitulo">Fecha de nacimiento</string>
    <string name="fechaNacimiento">Ingrese fecha nacimiento</string>
    <string name="telefonoTitulo">Teléfono</string>
    <string name="telefono">Ingrese teléfono</string>
    <string name="botonLmpiar">Limpiar</string>

    <!-- Finalizar reserva -->
    <string name="texto_finalizarreserva">Finalizar la reserva</string>
    <string name="texto_finalizarreserva_parte1">Confirmá tus datos personales</string>
    <string name="texto_finalizarreserva_parte2">Elegí una forma de retiro</string>
    <string name="texto_finalizarreserva_parte3">Resumen de la reserva</string>
    <string name="text_onclick_puntodeentrega">Comunicate con el productor para coordinar la fecha y el punto de entrega que más te convenga.</string>
    <string name="texto_usuarioreserva">Usuario</string>
    <string name="texto_nombrereserva">Nombre</string>
    <string name="texto_apellidoreserva">Apellido</string>
    <string name="texto_contactoreserva">Contacto</string>
    <string name="spinner_text_punto_entrega">"Elegí punto de entrega"</string>
    <string name="datosparaelretirotext">"Datos para el retiro"</string>
    <string name="datosproductosseleccionadostext">"Productos seleccionados"</string>
    <string name="text_total">"Total $ "</string>

<!--    Preferences keys-->
    <string name="user_preference_key">user_data</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key">AIzaSyA0Z6lbH46TvbqPzkqYS5MLo2ci8Vr-dYw</string>
    <string name="imagenCultura" />
    <string name="CrearUsuario">Crear</string>
    <string name="tituloModificarProducto">Modificar producto</string>

</resources>